updated notebook, added nb to my users folder

--- a/project/02-embeddings/embedding.ipynb
+++ b/project/02-embeddings/embedding.ipynb
@@ -372,11 +372,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def extract_embeddings(images: torch.Tensor, batch_size: int = 64) -> np.ndarray:\n",
+    "def extract_embeddings(model, images: torch.Tensor, batch_size: int = 64) -> np.ndarray:\n",
     "    \"\"\"\n",
     "    Extract embeddings from a batch of images using DINOv2.\n",
     "\n",
     "    Args:\n",
+    "        model: Pretrained DINOv2 model\n",
     "        images: Tensor of shape (N, 1, 28, 28)\n",
     "        batch_size: Number of images per batch for the model\n",
     "\n",
@@ -428,7 +429,7 @@
     "subset_labels = train_labels[indices]\n",
     "\n",
     "print(\"Extracting embeddings...\")\n",
-    "embeddings = extract_embeddings(subset_images, batch_size=64)\n",
+    "embeddings = extract_embeddings(model, subset_images, batch_size=64)\n",
     "print(\"Embeddings shape:\", embeddings.shape)"
    ]
   },
