add ir notebook

--- a/user/yli/03-information-retrieval/information-retrieval.ipynb
+++ b/user/yli/03-information-retrieval/information-retrieval.ipynb
@@ -2793,6 +2793,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "force update"
+   ]
   }
  ],
  "metadata": {
